changed theme name
名称変更、およびそれに伴う修正

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= incident manager用テーマ
+= temaheras用テーマ
 farend fancyをベースに変更を行ったものです。
 
 farend fancy:
@@ -6,4 +6,4 @@ https://github.com/farend/redmine_theme_farend_fancy
 
 === 新しいテーマの利用
 Redmineの管理画面で新しいテーマを利用する設定を行います。
-「管理」→「設定」→「表示」画面内の項目「テーマ」で「Incident-manager」を選択、画面最下部の「保存」ボタンをクリックしてください。
+「管理」→「設定」→「表示」画面内の項目「テーマ」で「Temaheras」を選択、画面最下部の「保存」ボタンをクリックしてください。
